--- a/wrangler.toml
+++ b/wrangler.toml
@@ -109,9 +109,9 @@ enabled = true
 
 # Bind a Vectorize index. Use to store and query vector embeddings for semantic search, classification and other vector search use-cases.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#vectorize-indexes
-# [[vectorize]]
-# binding = "MY_INDEX"
-# index_name = "my-index"
+[[vectorize]]
+binding = "VECTORIZE"
+index_name = "tutorial-index"
 
 [[d1_databases]]
 binding = "DB" # available in your Worker on env.DB
