--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "wrangler": "^3.80.4"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "moment": "^2.30.1"
   }
 }
